<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_desc_header"
            style="@style/Header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            style="@style/Paragraph"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_desc_header"
            style="@style/Header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_desc"
            style="@style/Paragraph"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/warning_shape"
            android:backgroundTint="@color/demo_yellow">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_warning_yellow_24dp"
                android:drawableTint="@color/demo_gray"
                android:drawablePadding="5dp"
                android:layout_gravity="top"
                android:gravity="top"
                android:text="@string/disclaimer"
                android:textStyle="italic"
                android:textColor="@color/demo_gray"
                android:justificationMode="inter_word" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invocation_desc"
            android:layout_marginTop="10dp"
            style="@style/Paragraph"/>

    </LinearLayout>

    <org.inappdevtools.compat.CardView
        android:id="@+id/card_view_crash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@color/demo_red"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/title_crash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/home_crash_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/demo_white"/>

            <TextView
                android:id="@+id/detail_crash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_crash"
                android:layout_toLeftOf="@id/image_crash"
                android:text="@string/home_crash_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/demo_white"/>

            <ImageView
                android:id="@+id/image_crash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_bug_report_white_24dp"
                android:tint="@color/demo_white"/>
        </RelativeLayout>
    </org.inappdevtools.compat.CardView>

    <org.inappdevtools.compat.CardView
        android:id="@+id/card_view_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@color/toastDev"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/title_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/home_messages_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/demo_white"/>

            <TextView
                android:id="@+id/detail_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_messages"
                android:layout_toLeftOf="@id/image_messages"
                android:text="@string/home_crash_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/demo_white"/>

            <ImageView
                android:id="@+id/image_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_message_white_24dp"
                android:tint="@color/demo_white"/>
        </RelativeLayout>
    </org.inappdevtools.compat.CardView>

    <org.inappdevtools.compat.CardView
        android:id="@+id/card_view_browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@color/demo_blue_dark"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/title_browse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/home_browse_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/demo_white"/>

            <TextView
                android:id="@+id/detail_browse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_browse"
                android:layout_toLeftOf="@id/image_browse"
                android:text="@string/home_browse_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/demo_white"/>

            <ImageView
                android:id="@+id/image_browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_run_white_24dp"
                android:tint="@color/demo_white"/>
        </RelativeLayout>
    </org.inappdevtools.compat.CardView>

    <org.inappdevtools.compat.CardView
        android:id="@+id/card_view_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@color/demo_green_dark"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/title_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/home_help_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/demo_white"/>

            <TextView
                android:id="@+id/detail_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_help"
                android:layout_toLeftOf="@id/image_help"
                android:text="@string/home_help_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/demo_white"/>

            <ImageView
                android:id="@+id/image_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_help_outline_white_24dp"
                android:tint="@color/demo_white"/>
        </RelativeLayout>
    </org.inappdevtools.compat.CardView>

</LinearLayout>